--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.3.3",
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.17.0",
     "rxjs": "~7.8.0",
